# esp32s3-console-project

./: CMakeLists.txt  Include-path.txt  README.md  code.code-workspace  partition.csv  sdkconfig  sdkconfig.defaults.thmi  sdkconfig.old  version
backup/sdkconfig/idf-v5.5.0/: sdkconfig
demo/1.main-console+filesystem/main-5-August-2025/: main.cpp
demo/console+lvgl(thmi)/lib/command_line_interface/include/: command_line_interface.h
demo/console+lvgl(thmi)/lib/command_line_interface/modules/ram_nfo/: ram_nfo.c
demo/console+lvgl(thmi)/lib/command_line_interface/src/: cli_rtos_task.c  command_line_interface.c  init.c
demo/console+lvgl(thmi)/main/: app_main.cpp
demo/console-simple/lib/command_line_interface/include/: command_line_interface.h
demo/console-simple/lib/command_line_interface/modules/restart/: restart.c
demo/console-simple/lib/command_line_interface/modules/version/: version.h
demo/console-simple/lib/command_line_interface/src/: cli_rtos_task.c  init.c
demo/main/: app_main.cpp
demo/main-console/main/: CMakeLists.txt  app_main.cpp
help/: Git_HELP.md  Mac_HELP.md
lib/ESP32_Command_Line_Interface/: CMakeLists.txt
lib/ESP32_Command_Line_Interface/include/: command_line_interface.h
lib/ESP32_Command_Line_Interface/src/: command_line_interface.c
lib/command_line_interface/: CMakeLists.txt  cli_rtos_task.c  command_line_interface.c  command_line_interface.h
lib/command_line_interface/include/: command_line_interface.h  config.h
lib/command_line_interface/modules/bootloader_nfo/: bootloader_nfo.c
lib/command_line_interface/modules/info/: funct.c  funct.h  info.c
lib/command_line_interface/modules/nvs_cmd/: nvs_cmd.c
lib/command_line_interface/modules/ram_nfo/: ram_nfo.c  ram_nfo.h
lib/command_line_interface/modules/restart/: restart.c
lib/command_line_interface/modules/tasks_nfo/: tasks_nfo.c
lib/command_line_interface/modules/uptime/: uptime.c
lib/command_line_interface/modules/version/: version.c  version.h
lib/command_line_interface/modules/wifi_cmd/: wifi_join_cmd.c
lib/command_line_interface/src/: command_line_interface.c
lib/command_line_interface/version/: version.c
lib/esp32s3-cli-v002/: CMakeLists.txt
lib/filesystem-v0001/: CMakeLists.txt  version
lib/filesystem-v0001/include/: filesystem-os.h
lib/filesystem-v0001/src/: filesystem-os.c
lib/filesystem-v001/: CMakeLists.txt  version
lib/filesystem-v001/include/: filesystem-os.h
lib/filesystem-v001/src/: filesystem-os.c
lib/one-cli-v0003/: CMakeLists.txt
lib/one-cli-v0003/include/: config.h
lib/one-cli-v0003/modules/hello/: hello.c
lib/one-cli-v0003/modules/hello_cmd/: hello_cmd.c
lib/one-cli-v0003/modules/info/: info.c
lib/one-cli-v0003/modules/info_cmd/: info_cmd.c
lib/one-cli-v0003/modules/nvs_cmd/: nvs_cmd.c
lib/one-cli-v0003/modules/perfmon_cmd/: perfmon_cmd.c
lib/one-cli-v0003/modules/restart/: restart.c
lib/one-cli-v0003/modules/restart_cmd/: restart_cmd.c
lib/one-cli-v0003/modules/set_cmd/: set_cmd.c
lib/one-cli-v0003/modules/tasks/: tasks.c
lib/one-cli-v0003/modules/tasks_cmd/: tasks_cmd.c
lib/one-cli-v0003/modules/uptime/: uptime.c
lib/one-cli-v0003/modules/uptime_cmd/: uptime_cmd.c
lib/one-cli-v0003/modules/wifi_cmd/: wifi_join_cmd.c
lib/one-cli-v0003/src/: command_line_interface.c  config.c  init.c  one-cli.c
main/: CMakeLists.txt  app_main.cpp  main.cpp  rtos.cpp
main/cmd_resmon/: cmd_resmon.c  cmd_resmon.h  version.h
